fix emoji picker on mobile

--- a/www/src/css/emoji.css
+++ b/www/src/css/emoji.css
@@ -150,3 +150,9 @@
     object-fit: contain;
 }
 
+@media screen and (max-width: 600px) {
+    .emoji-picker {
+        right: 0;
+    }
+}
+
