--- a/www/src/css/main.css
+++ b/www/src/css/main.css
@@ -157,14 +157,14 @@ svg {
 }
 
 .sidebar-room-container {
-    flex: 1 1 0;
+    flex: 1 1 0%;
     overflow-y: auto;
 }
 
 .sidebar-room-element {
     display: flex;
     position: relative;
-    flex: 1 1 0;
+    flex: 1 1 0%;
     justify-content: space-between;
     align-items: flex-start;
     cursor: pointer;
@@ -175,7 +175,7 @@ svg {
 .sidebar-room-separator {
     display: flex;
     position: relative;
-    flex: 1 1 0;
+    flex: 1 1 0%;
     justify-content: space-between;
     align-items: flex-start;
     cursor: pointer;
@@ -213,7 +213,7 @@ svg {
 /* ROOM */
 .room {
     display: flex;
-    flex: 1 1 0;
+    flex: 1 1 0%;
     flex-direction: column;
     height: 100%;
     user-select: auto;
@@ -254,13 +254,13 @@ svg {
 
 .room-container {
     display: flex;
-    flex: 1 1 0;
+    flex: 1 1 0%;
     flex-direction: column;
     overflow-y: auto;
 }
 
 .room-content {
-    flex: 1 1 0;
+    flex: 1 1 0%;
     padding-top: 0.5rem;
     overflow-y: auto;
 }
@@ -275,7 +275,7 @@ svg {
 }
 
 .text-control {
-    flex: 1 1 0;
+    flex: 1 1 0%;
     display: flex;
     flex-direction: row;
     padding-bottom: 0.5rem;
